2006-04-03  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Beth.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=8085
          REGRESSION: Main menu positioned incorrectly on eia.org and fedex.com/us

        * fast/dom/Element/offsetTop-table-cell-expected.txt: Added.
        * fast/dom/Element/offsetTop-table-cell.html: Added.

2006-04-03  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Darin.

        - Test for http://bugzilla.opendarwin.org/show_bug.cgi?id=7943
          Layer outline does not repaint

        * fast/repaint/inline-block-overflow-expected.png: Added.
        * fast/repaint/layer-outline-expected.checksum: Added.
        * fast/repaint/layer-outline-expected.png: Added.
        * fast/repaint/layer-outline-expected.txt: Added.
        * fast/repaint/layer-outline-horizontal-expected.checksum: Added.
        * fast/repaint/layer-outline-horizontal-expected.png: Added.
        * fast/repaint/layer-outline-horizontal-expected.txt: Added.
        * fast/repaint/layer-outline-horizontal.html: Added.
        * fast/repaint/layer-outline.html: Added.

2006-04-03  Adele Peterson  <adele@apple.com>

        Reviewed by Justin.

        - Test for http://bugzilla.opendarwin.org/show_bug.cgi?id=8104
        REGRESSION (NativeTextField): New text fields should not allow pasting newlines

        * fast/forms/input-truncate-newline-expected.txt: Added.
        * fast/forms/input-truncate-newline.html: Added.

2006-04-03  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Darin.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=8099
          REGRESSION: XMLHttpRequest lowercase post requests broken

        * http/tests/xmlhttprequest/methods-lower-case-expected.txt: Added.
        * http/tests/xmlhttprequest/methods-lower-case.html: Added.

2006-04-02  Trey Matteson  <trey@usa.net>

        Reviewed by Maciej.
